# observer-ptr-lite

./: .tgitconfig  .travis.yml  CHANGES.txt  CMakeLists.txt  README.md  appveyor.yml  conanfile.py
.github/workflows/: ci.yml
example/: 01-basic.cpp  02-no-exceptions.cpp  CMakeLists.txt
include/nonstd/: observer_ptr.h  observer_ptr.hpp
project/: observer-ptr.cbp  observer-ptr.workspace
script/: create-cov-rpt.py  create-vcpkg.py  update-version.py  upload-conan.py
test/: CMakeLists.txt  lest_cpp03.hpp  observer-ptr-main.t.cpp  observer-ptr.t.cpp  observer_ptr-main.t.cpp  observer_ptr-main.t.hpp  observer_ptr.t.cpp  observer_ptr.t.h  t.bat  tc-cl.bat  tc.bat  tg-all.bat  tg.bat
